...
      />
      <Tabs.Screen
        name="messages/index"
        options={{
          title: t("messaging.title"),
          tabBarLabel: (props) => <TabLabel {...props} label={t("messaging.title")} />,
          tabBarButton: (props) => <TabButton {...props} testID="tab-messages" />,
          tabBarIcon: ({ color, focused }) => (
            <TabIcon name="message" color={color} focused={focused} />
          ),
        }}
      />
      <Tabs.Screen
...
      />
      <Tabs.Screen
        name="me/index"
        options={{
          title: t("nav.profile"),
          tabBarLabel: (props) => <TabLabel {...props} label={t("nav.profile")} />,
          tabBarButton: (props) => <TabButton {...props} testID="tab-me" />,
          tabBarIcon: ({ color, focused }) => (
            <TabIcon name="user" color={color} focused={focused} />
          ),
        }}
      />

...
